# papergraph

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  papergraph.schema
.github/workflows/: rust.yml
data/: sample-S2-records.json
deploy/: README.md
deploy/k8s/: cloudsql.yaml  dgraph.yaml  gke-ssd-storageclass.yaml  hasura-dev.yaml  hasura.yaml  ingress.yaml  postgres.yaml
deploy/k8s/workflows/: run-dgraph.yaml  run.yaml  seed-dgraph.yaml  seed.yaml
hasura/: schema.graphql
hasura/metadata/: tables.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-04-29-090350_create_papers/: down.sql  up.sql
migrations/2020-04-29-094327_create_citations/: down.sql  up.sql
migrations/2020-04-29-111644_create_authors/: down.sql  up.sql
migrations/2020-05-01-214409_create_functions/: down.sql  up.sql
migrations/hasura/metadata/: tables.yaml
notebooks/: .gitignore  graph.json  graph_analysis.ipynb  simple_analysis.ipynb
src/: dgraph.rs  io.rs  lib.rs
src/db/: mod.rs  models.rs  schema.rs  utils.rs
