[package]
name = "papergraph"
version = "0.1.0"
authors = ["Denny Britz <dennybritz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
# TODO: Get from crates.io once 3.0 is published
clap = { git = "https://github.com/clap-rs/clap/" }
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15.0"
itertools = "0.9.0"


[[bin]]
name = "papergraph"
path = "src/bin/papergraph.rs"